# llamaindex-starter-kit

./: README.md  credentials.json  env.sample  pyproject.toml  requirements.txt  starter_kit_notebook.ipynb
llamaindex_starter_kit/: agent.py  kg_rag.py  main.py  models.py  vector_index.py
llamaindex_starter_kit/notebook/: starter_kit_notebook.ipynb
